# ChangeLog for sys-apps/haveged
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/haveged/ChangeLog,v 1.23 2012/12/28 12:54:40 flameeyes Exp $

  28 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> -haveged-1.4.ebuild,
  files/haveged-init.d.2:
  Remove old. Fix dependencies on init script.

  21 Nov 2012; Agostino Sarubbo <ago@gentoo.org> haveged-1.5.ebuild:
  Stable for x86, wrt bug #441506

  06 Nov 2012; <ago@gentoo.org> haveged-1.5.ebuild:
  Stable for amd64, wrt bug #441506

  19 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Re-assign to sysadmin herd.

*haveged-1.5 (15 Aug 2012)

  15 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> +haveged-1.5.ebuild,
  -haveged-1.3a.ebuild:
  Version bump; remove oldest version.

  14 Aug 2012; Johannes Huber <johu@gentoo.org> haveged-1.4.ebuild:
  Stable for x86, wrt bug #422171

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> haveged-1.4.ebuild:
  Stable for amd64, wrt bug #422171

  02 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> -files/haveged-init.d,
  -haveged-1.1.ebuild, -haveged-1.2.ebuild, haveged-1.4.ebuild:
  Remove old versions; run tests in parallel if so chosen.

  14 Apr 2012; Agostino Sarubbo <ago@gentoo.org> haveged-1.3a.ebuild:
  Stable for amd64, wrt bug #406611

  13 Apr 2012; Jeff Horelick <jdhore@gentoo.org> haveged-1.3a.ebuild:
  marked x86 per bug 406611

*haveged-1.4 (13 Apr 2012)

  13 Apr 2012; Jeremy Olexa <darkside@gentoo.org> +haveged-1.4.ebuild:
  Version bump, minimal changes for end user (diagnostic and experimental
  features added)

  10 Feb 2012; Thomas Kahle <tomka@gentoo.org> haveged-1.2.ebuild:
  marked x86 per bug 390087

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> haveged-1.2.ebuild:
  Stable for amd64, wrt bug #390087

  26 Jan 2012; Jeremy Olexa <darkside@gentoo.org> haveged-1.1.ebuild,
  haveged-1.2.ebuild, haveged-1.3a.ebuild:
  Revert: add ~arm, works on armv7
