@@ -4,17 +4,19 @@ Hash: SHA256
 AUX haveged-conf.d 320 SHA256 3b53f4aabf937766b5aa806561e9b97ab2be49ac25d76ae97f4fca4ab7a42e33 SHA512 7707b14da7edefd9e423539ddf2a8439f7dbe57940ad1f3d3adc9ba12152a38eecdc0906ec3693ba1b73bda827035f9fba05f277e968cef05577ec2b0822cfc1 WHIRLPOOL 2a526a0b5a21835d5754961b5de2cbaae9bc0e48c1e9266f8f0d9c962aa82788e658b5ccfca7f39cdc837f2dad998da3adfc2e44f18688ac50a6cd2c1b27e089
 AUX haveged-init.d.2 427 SHA256 04998aeb504911133e16cc0df8606d363d01b2454168e634310a5c1e902c13b0 SHA512 adc59274c419f8757347032cd2c58dd0de2a46ddd33d7cc0acc9b3e1a30b985e7f8f307a9874a8285baf1a652c0b2bb509efc2c7aad47398885415d1474b9819 WHIRLPOOL f788a2eb7148d487510791ff457b48d95b42c55c8db9a86cb9cbfdcdd0053618dadb7c1421af48d791d6afa680c841b39e4a61dfe5c68977249818bdb6537d6b
 DIST haveged-1.5.tar.gz 243348 SHA256 f7d5a7e995befd4723811b331854fa53fe558546ba0c1dcb4675698e8db3702f SHA512 57952a79d4535267de15c42511991e2b06021db3b1ea90a45b30c5bd5ac65f6b9b6d66373d981280a3e7c0aff24dd6feae5640394e77f08a893dba5f31d86c91 WHIRLPOOL ef4c5acf8c787e18a436fe34ef2479658f325852e5717ad1a06bf19ecbe485e646a2bb132617417de26982d1d388b90293d3c8c31c0e7a0b0db570be80c5e5a4
+DIST haveged-1.6.tar.gz 244301 SHA256 d47db0cf9a58f7ec9877eec543a062f01309916f569639c27a8b0dd004b24541 SHA512 8569b5b9d026cfcab5b74d7cb79dc0199f24d05b522d9c227fe452cf61e1e526165e6d2c2bdab2354305f861a4ee01d89b59e93513e0bfc9a63cebf7de39166e WHIRLPOOL 52b1a405329cdd7f23f6308280af7478c6ea4b1eb47eef3fa1d96927fbe468514209477b8a958c98b56c03427eef6bae95a986b655ee3b8ff47adafd42dc7da4
 EBUILD haveged-1.5.ebuild 806 SHA256 02e26511c70044ded4ca788779c9f177c62aec5caaf595382e262468eaecb646 SHA512 9221a3e6857be42b6107f7b8f492bdd412d152f3e1ea6001925afde12e5b8500c1613b2355ca63779c5cb75ae630d26946b8c5e34b643c281bb5d398e03ea4c0 WHIRLPOOL 55f9604a6e451f79965c4878914b150df6c973779e444ef8abc95a3051b58f876bd5f2ac72e8783726881a5a7ee67d8081deeb6fb96d978d10c02668e2b36745
-MISC ChangeLog 3214 SHA256 86084961a9b2ecc7b0f9b7a6eec0f953d9ccd1d0826978aa2a2810a7a68728f8 SHA512 9a9e657738160d988c64ca53d76a59354066317b0947f470ed5f3ce7410693e2d41160af380c87931b1622044712f801287d71ea4cb5e4463e7693fce2e9fb84 WHIRLPOOL d558a2564d564525d515d90b6cebc29a0ce845ec756e2244d70528404a9d054e23e5ab64358079bfdba7ce8b6401ef2b2a6ff29e83787839f828bc0cc19b8c84
+EBUILD haveged-1.6.ebuild 814 SHA256 acf770d7af8cfb5ce2c6970d26a322acd0bbcab6d05f32951d2d7417b413840c SHA512 767ed9616bd14a9456f014289d9baca33e9dee6ce218656660a0f7551fec08d855dda295a5bae2081bafe4be8ac6ab27f3f894ccf2688c09daca80e60d47a137 WHIRLPOOL df183e44e7db83f43ddef70f6e05516e57f18bfeaa1bc4f238b1e4d8d7578f8b95250cd1729a023d855f4d3e8b0096b56670d3caf70c68a5fe6b9abe33ce2d51
+MISC ChangeLog 3336 SHA256 a08bd54a11f38054d9dfbcc07c5c0ca1ac9ba1ddb7e5f9aed5c080b68563ffe1 SHA512 dad1585754f9dafbe084d3d56868f7251580a814eb5748b9582288818622f38ae08feaba27d643c82a5a07189d0c2117baec1ff5b46938ee50e3fba380782787 WHIRLPOOL d58131bca63a39ec7952124f3e584819cdc8bdc795013358bd8412089ae7e66c8aa59298bbc72e11466af1c37b65a584f18f1f11c5a8dccb8a7bffc129af0d0a
 MISC metadata.xml 163 SHA256 a8aa48f63dab89c2af1f961029dea0ebf68a618dba59ac4661ea915dc85e18f0 SHA512 1744b806c2ddddbeee4d2b1e23c7f1ccf0d9427f679a65bd22cde617399d3a5bb30aada17ba5b648a3a46d9e1169b9d30ede4551fb8756dffc4e3e9306b199cf WHIRLPOOL b5af95c50999aaf066e6466928866baa34c6425459a580ab0712ba3e3ea518dc37a4082007043307ff169b1f8efe4f6a632d27d016b6fd307bf463cb47b78d55
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQ3ZaYAAoJEBzRPIrUMBNCF9IH/3pZMn7IGK2cp4QxOxB8nRyj
-nKfOhSRGn0f0aXsNcIS6rn2Fj+wanRik2EvjFHrWgsLTFlf65ja+dsFmh04CoCrq
-CEM6OMrg6hbAHedoJ+Webu45zB+KNZQdNPah+mvgCkbl+/uu0yjZDAE9ODSSTeXo
-zVQzlagVb0XmgNLn5KfEUEaFqysIgej8eF13ZyTA+UYyT+zBq+uezHxLk9bDlxY0
-OCo6Ah0cNyfq0tNmsSQZkVJrlensxm2GYj//FpeyPNlBoWuYfUmSxa3444EUtP3W
-RxRzBGW4H4XUcp4QuYfZIGBkKNDXdq5LXMhinpRShbyPMlJOAiD276P9mbfeBNA=
-=f5Nr
+iQEcBAEBCAAGBQJQ6bmNAAoJEBzRPIrUMBNCtL4IAING363nVKz0TCh64nuPymX+
+4nymZeu8f1iW6MZ9RiZNzNpRlhgG35sh2nhrm7cE65Qj9t0acYsF8O9Yiurg5uqF
+9+v09OFYoaYy02/w+xa8d4E/fOguEzmA88XwaO+Su3uvWn174zFuLSMyyKy6Nt9M
+DzcIYQF1ydTJTdDDDvE17uYvbGz/fsFOf1s/vxp/yz6Six58d+jW7e2b+aPTkow8
+mPoL0tKxtO2DloAJ+i+W6Zw3apCY8WulOgIVBuseI+AJcRj7dcDghXUFz10pnAcd
+P7ZeqUUCHbPmvejW5J/JIq518nx408h3SBfUYQ8G6PkfElm0TK2rJKfmKXs2500=
+=lpMg
 -----END PGP SIGNATURE-----
