@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/haveged
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/haveged/ChangeLog,v 1.23 2012/12/28 12:54:40 flameeyes Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/haveged/ChangeLog,v 1.24 2013/01/06 17:50:44 flameeyes Exp $
+
+*haveged-1.6 (06 Jan 2013)
+
+  06 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org> +haveged-1.6.ebuild:
+  Version bump.
 
   28 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> -haveged-1.4.ebuild,
   files/haveged-init.d.2:
